<resources>
    <string name="app_name">weatherForecast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Hello Home fragment</string>
    <string name="hello_fav_fragment">Hello fav fragment</string>
    <string name="hello_setting_fragment">hello_setting_fragment</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settingsItem">Settings</string>
    <string name="alarmItem">Alarm</string>
    <string name="favoratesItem">Favorites</string>
    <string name="homeItem">Home</string>
    <string name="lang_swich">Language</string>
    <string name="en_radiobutton">English</string>
    <string name="ar_radiobutton">Arapic</string>
    <string name="degree">degree</string>
    <string name="select_location">select location</string>
    <string name="save_location_to_favorite"> save location to favorite</string>
    <string name="gps_map_Swich"> Location</string>
    <string name="gps_radiobutton">gps</string>
    <string name="map_radiobutton">map</string>
    <string name="temp_swich"> Temperature</string>
    <string name="fhren_radiobutton">Fahrenheit</string>
    <string name="clizeus_radiobutton">celsius</string>
    <string name="kilven_radiobutton">kelvin</string>
    <string name="wind_speed">wind speed</string>
    <string name="cloud">cloud</string>
    <string name="Temp">Temprture</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">pressure</string>
    <string name="tofavbuttin">save to favorite</string>
    <string name="to_sharedpref">save location</string>
    <string name="alarm"> alarm</string>
    <string name="notification"> notification</string>
    <string name="select_duration"> select_duration</string>
    <string name="enable_alert"> enable_alert</string>
    <string name="add_alert"> add_alert</string>
    <string name="dismiss"> dismiss</string>

    add_alert

</resources>