<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Alarm.AlarmDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="118dp"
        android:orientation="vertical"
        android:padding="16dp">


        <RadioGroup
            android:id="@+id/radioGroupAlertType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/alarm" />

            <RadioButton
                android:id="@+id/radioNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/select_duration"
            android:textSize="16sp" />

        <TimePicker
            android:id="@+id/timePickerDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Switch
            android:id="@+id/switchAlertEnabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:checked="true"
            android:text="@string/enable_alert" />

        <Button
            android:id="@+id/btnAddAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/add_alert" />

    </LinearLayout>

</FrameLayout>